--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="icons">
         <i class="fas fa-users"></i>
         <h3>1040+</h3>
-        <p>satisfied patients</p>
+        <p>satisfied users</p>
     </div>
 
 
